Fix icons on file trees for expanded/collapsed folders
git-svn-id: https://svn.broadinstitute.org/genepattern/trunk@11566 48a7a3f7-ad46-0410-b969-29950918272e

--- a/website/js/themes/default/style.css
+++ b/website/js/themes/default/style.css
@@ -79,14 +79,14 @@
 	visibility: hidden;
 }
 
-.jstree-closed ins.jstree-icon {
+.jstree-closed > ins.jstree-icon {
 	background-position: 0px 0px;
 	background-image: url("/gp/images/collapsed.gif");
 	background-repeat: no-repeat;
 	background-color: transparent;
 }
 
-.jstree-open ins.jstree-icon {
+.jstree-open > ins.jstree-icon {
 	background-position: 0px 0px;
 	background-image: url("/gp/images/expanded.gif");
 	background-repeat: no-repeat;
